# minitools

./: .gitignore  README.md  REAME.md  readmeGenerator.py
.githooks/: pre-commit
PhysicsEditorHelper/: main.py
ahk/: .gitignore  README.md  a.ahk  ahk.ahk  danganronpa.ahk  direction.ahk  galgame.ahk  global.ahk  keepPressing.ahk  laptop-only.ahk  latex.ahk  leidian.ahk  leidian.global.ahk  markdown.ahk  misc.ahk  obsidian.ahk  pdf.ahk  snippet.ahk  snippet.ahk2  sumatra.ahk  terminal.ahk  typora.ahk  vim.ahk  wechat.ahk  wechat.global.ahk
ankiHelper/: index.html
appLauncher/: .gitignore  Pipfile  README.md  config_editor.py  config_manager.py  main.py  main.pyw  pyproject.toml
auto-qq/: README.md  main.pyw  txt.txt
autoWechat/: .gitignore  Pipfile  README.md  main.py  msg.template.json  requirements.txt
bf2link/: main.py  paragraph2link.py  word2link.py
binreplace/: README.md  go.mod  main.go
bireplace/: README.md  go.mod  main.go  replace.go  replace_test.go
bookWhisper/: .gitignore  README.md  config.template.yaml  pyproject.toml
bookWhisper/.claude/: settings.local.json
bookWhisper/src/bookwhisper/: __init__.py  checkpoint.py  config.py  converter.py  epub_processor.py  interpreter.py  main.py  prompts.py  splitter.py
bookWhisper/tests/: conftest.py  test_checkpoint.py  test_config.py  test_converter.py  test_epub_processor.py  test_interpreter.py  test_main.py  test_prompts.py  test_splitter.py
bookWhisper/tests/data/: 金枝.epub  阿奎那政治著作选 (汉译世界学术名著丛书) - 阿奎那.azw3
checkMDImage/: README.md  checkMDImage.py
clash_helper/: README.md  clash_helper.py
cnkiCrawler/: README.md  main.py
colorBlind/: README.md  main.py
copyHtml/: README.md  copy.py  copyHtml.py
copyLatexFromHtml/: copy.py  copyLatexFromHtml.pyw
copyMd/: README.md  copyMd.go  go.mod
dictionaryAttack/: README.md  main.py
dockerClear/: README.md  dockerClear.pyw
downloader/: README.md  downloader.py
flatFolder/: .gitignore  README.md  main.py  settings.template.py
fullScreenCheck/: README.md  isFullScreen.py  main.py  main.pyw
fullcpu/: README.md  fullcpu.go  fullcpu.py  go.mod
gamepad_mapper/: .gitignore  RDR2_launcher.py  README.md  auto_flingtrainer.py  gamepad_mapper.py  gamepad_mapper2.py  pyproject.toml  requirements.txt
git-autocommit/: .gitignore  README.md  auto_commit.py  const.py.template  models.py  process_manager.py  wait_network.py
handles/: README.md  config.template.py  main.py
handright/: .gitignore  Pipfile  README.md  main.py
headers2dict/: README.md  headers2dict.py
hollow_knight_trainer/: README.md  hollow_knight.CT
html2pdf/: README.md  main.py
img-spider/: README.md
liuji/: README.md  modify.py  read.py  translate.py
localizeMD/: README.md  localizeMd.py
localizeWebsite/: README.md  localizeWebsite.py
lockScreen/: README.md
lunarDateCrawling/: 1-crawling.py  2-move-forward-one-day.py  3-format-date.py  Pipfile  README.md  chunjie.txt  qixijie.txt  (+1 more)
md2html/: .gitignore  README.md  beautify.py  config.template.toml  config_model.py  deploy.py  image_processor.py  md2html.py  processor.py  pyproject.toml  wikilink_processor.py
md2html/tests/: conftest.py  test_image_processor.py  test_wikilink_processor.py
replaceText/: .gitignore  Pipfile  README.md  a.py  config.template.json  main.py  main.pyw  pyproject.toml  settings.template.py
(+129 files in other folders)
