[project]
name = "applauncher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyinstaller>=6.20.0",
    "customtkinter>=5.2.0",
]
[project.gui-scripts]
applauncher = "main:run_app"

[tool.setuptools]
py-modules = ["main", "config_manager", "config_editor"]
