[project]
name = "md2html"
version = "1.0.0"
description = "Convert Markdown notes to a static HTML site with MkDocs Material theme"
requires-python = ">=3.11"
dependencies = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.6", # 我有一些根据宽度隐藏侧边栏的自定义样式，担心版本不同会导致样式失效，所以锁定版本
    "pyinstaller>=6.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
md2html = "md2html:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "md2html.py",
    "config_model.py",
    "processor.py",
    "image_processor.py",
    "wikilink_processor.py",
    "deploy.py",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
